PA_Education/TestMenifest/force-app/main/default/objects/InternalTaskTeam__c/InternalTaskTeam__c.object-meta.xml
<CustomObject>
    <description>내부 Task 수행팀 관리 객체
- 23/10/13 김현진 생성</description>
    <label>내부 Task 수행팀</label>
    <nameField>
        <displayFormat>Task-{0000}</displayFormat>
        <label>Seq</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>