PA_Education/TestMenifest/force-app/main/default/objects/InternalTaskTeam__c/fields/InternalTask__c.field-meta.xml
<CustomField>
    <fullName>InternalTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>내부 Task</label>
    <referenceTo>InternalTask__c</referenceTo>
    <relationshipLabel>내부 Task 수행팀</relationshipLabel>
    <relationshipName>InternalTask</relationshipName>
    <type>Lookup</type>
</CustomField>