PA_Education/TestMenifest/force-app/main/default/objects/InternalTaskTeam__c/fields/Ratio__c.field-meta.xml
<CustomField>
    <fullName>Ratio__c</fullName>
    <description>기여율: 1%~100%</description>
    <label>기여율</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>