PA_Education/TestMenifest/force-app/main/default/objects/InternalTaskTeam__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>사원명</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Task</relationshipName>
    <type>Lookup</type>
</CustomField>