PA_Education/TestMenifest/force-app/main/default/objects/InternalTaskTeam__c/fields/WorkDescription__c.field-meta.xml
<CustomField>
    <fullName>WorkDescription__c</fullName>
    <description>담당 업무를 간략히 기술한다.</description>
    <label>담당 업무</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>